# TriePad

./: .gitignore  CMakeLists.txt  README.md
include/: ActionHistory.h  EditorContext.h  FileManager.h  SearchEngine.h  TextBuffer.h  TrieDictionary.h  TriePadCommon.h  UIComponents.h
src/: ActionHistory.cpp  EditorContext.cpp  FileManager.cpp  SearchEngine.cpp  TextBuffer.cpp  TrieDictionary.cpp  UIComponents.cpp  main.cpp
